--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ url:              http://hyde.getpoole.com
 baseurl:          /
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           'beardofedu'
+  url:            https://twitter.com/beardofedu
 
 paginate:         5
 
@@ -22,4 +22,4 @@ paginate:         5
 version:          2.1.0
 
 github:
-  repo:           https://github.com/poole/hyde
+  repo:           https://github.com/githubschool/wtd-hello
